# mlak-test

./: README.md  requirements.txt
src/: task_01.py  task_02.py  task_03.py  task_04.py  task_05.py  task_06.py  task_07.py  task_08.py  task_09.py  task_10.py  task_11.py
src/data/: emails_parsed.txt  emails_raw.txt  example.txt
src/task_12/: README.md  docker-compose.yml
src/task_12/api/: api.dockerfile  celeryworker.dockerfile
src/task_12/api/app/: pyproject.toml
src/task_12/api/app/app/: settings.py  urls.py
src/task_12/api/app/mlak/: apps.py  models.py  urls.py  views.py
src/task_12/api/app/mlak/migrations/: 0001_initial.py  0002_alter_books_isbn.py
src/task_12/api/app/mlak/tasks/: celery_app.py  worker.py
src/task_12/api/app/mlak/templates/mlak/: base.html  book.html  index.html  login.html  sign.html
