[tool.poetry]
name = "task 12 api"
version = "0.0.1"
description = "task 12 API"
authors = ["Konstantin Klepikov <oformleno@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.6"
passlib = "1.7.4"
toml = "0.10.2"
Django = "4.2.8"
celery = "^5.2.7"
requests = "2.31.0"
redis = "5.0.1"
psycopg2 = "2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = ">=4.6"
ipython = "^8.0.0"
mypy = "^1.0.1"
black = "^21.12b0"
isort = "^5.10.1"
autoflake = "^1.4"
flake8 = "^4.0.1"
click = "^8.1.3"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
asyncio_mode = "auto"
